footer fix on mobile no.2

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body{
+    height: 100%;
     font-size: 10px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -14,8 +15,10 @@ span{
     color: crimson;
     font-weight: 900;
 }
-
-.container {
+.container{
+    min-height: 100%;           
+}
+.home .container {
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -306,7 +309,6 @@ nav{
 /* Footer */
 footer{
     position: relative;
-    min-height: 100%;
     width: 100%;
     height: 10vh;
     display: flex;
